chap5/kube-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80               
    targetPort: 8080        
  selector:                 
    app: kube
