chap5/kube-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-np
spec:
  type: NodePort
  ports:
  - port: 80               
    targetPort: 8080        
    nodePort: 30123
  selector:                 
    app: kube
