chap5/kube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube
spec:
  ports:
  - port: 80               
    targetPort: 8080        
    name: http
  - port: 443
    targetPort: 8443
    name: https
  selector:                 
    app: kube
