chap5/kube-ing-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ing
spec:
  rules:
  - host: kube.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-np
          servicePort: 80
